gcc-14.2.0/gcc/testsuite/gdc.test/compilable/issue24174.d
version https://git-lfs.github.com/spec/v1
oid sha256:0aeaa0dca1ba94a698f5a25a9749fbfad1265a60c5702136b2e4c2a4bb1e930d
size 525
